<resources>
    <string name="app_name">app2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chr_name">chr_name</string>
    <string name="con">con</string>
    <string name="cha">cha</string>
    <string name="intelligence">intelligence</string>
    <string name="wis">wis</string>
    <string name="dex">dex</string>
    <string name="str">str</string>
    <string name="STR">STR</string>
    <string name="DEX">DEX</string>
    <string name="INT">INT</string>
    <string name="WIS">WIS</string>
    <string name="CON">CON</string>
    <string name="CHA">CHA</string>
    <string name="CHR">CHR</string>
</resources>
