<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".stats">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/chr_name"
            android:ems="10"
            android:id="@+id/editText7"/>
    <TextView
            android:text="@string/chr_name"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView7"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="saveChr"/>
    <TextView
            android:text="@string/con"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="saveCon"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/con"
            android:ems="10"
            android:id="@+id/editText6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/cha"
            android:ems="10"
            android:id="@+id/editText5"/>
    <TextView
            android:text="@string/cha"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView5"
            android:textSize="25sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="saveCha"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/intelligence"
            android:ems="10"
            android:id="@+id/editText4"/>
    <TextView
            android:text="@string/intelligence"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView4"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="saveInt"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/wis"
            android:ems="10"
            android:id="@+id/editText3"/>
    <TextView
            android:text="@string/wis"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView3"
            android:clickable="true"
            android:focusable="true"
            android:onClick="saveWis"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/dex"
            android:ems="10"
            android:id="@+id/editText"/>
    <TextView
            android:text="@string/dex"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView2"
            android:textSize="25sp"
            android:onClick="saveDex"
            android:clickable="true"
            android:focusable="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/str"
            android:ems="10"
            android:id="@+id/editText2"/>
    <TextView
            android:text="@string/str"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:onClick="saveStr"
            android:clickable="true"
            android:focusable="true"/>
</FrameLayout>